docs(brand): fix brand misplacement on mobile (#2275)

--- a/docs/components/TopLevelNav/styles.less
+++ b/docs/components/TopLevelNav/styles.less
@@ -12,6 +12,11 @@
     }
   }
 
+  @media (max-width: @media-xs) {
+    text-align: left;
+    padding-left: 10px;
+  }
+
   @media (min-width: @media-xs) {
     position: fixed;
     padding: 10px 0;
